<resources>
    <string name="app_name">Antons Skafferi</string>
    <string name="login_button_text">Logga In</string>
    <string name="username_ghost_text">Användarnamn</string>
    <string name="password_ghost_text">Lösenord</string>

    <!-- Inställningar -->
    <string name="settings_users_title">Övrigt</string>
    <string name="settings_add_event_picture">Lägg till eventbilder</string>
    <string name="settings_log_out">Logga ut</string>

    <!-- Admin Page -->
    <string name="title_activity_admin">Admin</string>

    <string name="edit_lunch_label">Redigera Lunchmeny</string>
    <string name="edit_dinner_menu_label">Ändra Kvällsmeny</string>
    <string name="title_activity_edit_lunch">EditLunchActivity</string>

    <!-- Book table form -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boka">Boka</string>
    <string name="skriv_telenr">Skriv TeleNr</string>
    <string name="skriv_antal_kunder">Skriv Antal kunder</string>
    <string name="skriv_namn">Skriv Namn</string>
    <string name="skriv_efternamn">Skriv Efternamn</string>
    <string name="skriv_f_rnamn">Skriv Förnamn</string>
    <string name="date">Date</string>
    <string name="boka_bord">Boka Bord</string>
    <string name="pick_date">Pick Date</string>
    <string name="datum_yyyy_mm_dd">Datum YYYY-MM-DD</string>
    <string name="tid_hh_mm">Tid HH:MM</string>
    <string name="v_lj_datum">Välj</string>
    <string name="v_lj_tid">Välj</string>
    <string name="datum">Datum</string>
    <string name="tid">Tid</string>

    <!-- Popup: booked table -->
    <string name="popup_take_order_button">Ta beställning</string>
    <string name="popup_remove_booking_button">Ta bort bokning</string>
    <string name="popup_show_check_button">Visa nota</string>
    <string name="popup_show_booking_button">Visa bokning</string>
    <string name="popup_edit_booking_button">Redigera bokning</string>

    <!-- Popup: unbooked table -->
    <string name="popup_place_customer_button">Placera kund</string>

    <!-- Popup: occupied table -->
    <string name="popup_wipe_table_button">Rensa bord</string>

    <!-- View Orders Page -->
    <string name="table_id_header_text">Bord</string>
    <string name="order_summary_header_text">Ordersummering</string>
    <string name="order_status_header_text">Status</string>
    <string name="done_button">Order levererad</string>

    <!-- View Bookings Page -->
    <string name="table_id_text">Bord</string>
    <string name="booking_reference_text">Bokningsreferens</string>
    <string name="booking_time_text">Time</string>
    <string name="booking_persons_text">Antal</string>
    <string name="skriv_email">Skriv Email</string>

    <!-- View Booking for table Popup -->
    <string name="popup_booking_for_table_title">Bokningsinformation</string>
    <string name="popup_booking_for_table_firstname">Förnamn: </string>
    <string name="popup_booking_for_table_lastname">Efternamn: </string>
    <string name="popup_booking_for_table_time">Bokat från: </string>
    <string name="popup_booking_for_table_email">Email: </string>
    <string name="popup_booking_for_table_phone">Telefonnummer: </string>
    <string name="popup_booking_for_table_amount">Antal: </string>

    <!-- Ny beställningssida -->
    <string name="edit_item">Redigera</string>

    <!-- Redigera kvällsmeny -->
    <string name="delete_item">Ta bort</string>

    <!-- Redigera kvällsmeny popup -->
    <string name="title_hint">Titel</string>
    <string name="description_hint">Beskrivning</string>
    <string name="price_hint">Pris</string>
    <string name="category_hint">Välj kategori</string>
    <string name="update_button_text">Uppdatera</string>
    <string name="delete">Delete</string>

    <!-- Redigera schema -->
    <string name="edit_schedule_employee_hint">Välj anställd</string>
    <string name="edit_schedule_date_label">Datum</string>
    <string name="edit_schedule_start_time_label">Starttid</string>
    <string name="edit_schedule_end_time_label">sluttid</string>
    <string name="edit_schedule_choose_date_time_label">välj</string>
    <string name="edit_schedule_add_btn">LÄGG TILL</string>

    <!-- Swap schedule times -->
    <string name="swap_times_pick_time_hint">Välj tid</string>
    <string name="swap_times_pick_time_title">Välj den tid du vill byta ut:</string>

    <!-- Visa bokningar -->
    <string name="view_booking_date">Datum</string>
    <string name="view_booking_reference">Bokningsreferens</string>
    <string name="view_booking_nrOfPersons">Antal</string>
    <string name="view_booking_time">Tid</string>
    <string name="view_booking_pick_date">Välj datum</string>
    <string name="view_booking_name">Namn</string>


    <!-- Byta tid -->
    <string name="swap_times_swap_with">Byt tid med </string>
    <string name="swap_times_time">Kl: </string>
    <string name="swap_times_send_request">Skicka förfrågan</string>

    <!-- Redigera middag-->
    <string name="edit_dinner_edit">Redigera</string>

    <!-- Multiline text -->
    <string name="multiline_write_here">Skriv här</string>

    <!-- Summering av order-->
    <string name="order_summary_head_txt">Summering av order</string>
    <string name="order_summary_order_text">Beställ</string>

    <!-- Bokningsalternativ -->
    <string name="todo">TODO</string>

    <!-- Orderkomponent -->
    <string name="order_component">Beställt</string>

    <!-- Schemakomponent -->
    <string name="schedule_component_timedefault">14:00 - 18:00</string>
    <string name="schedule_component_switch_btn">Byt</string>

    <!-- Sammanfattningskomponent -->
    <string name="summary_component_price">Pris: </string>
    <string name="summary_component_food">Mat</string>
    <string name="summary_component_amount">Antal</string>

    <!-- Bordskomponent -->
    <string name="table_component_number">0 </string>

    <!-- Redigera lunch-->
    <string name="edit_lunch_edit_title">Redigera dagens lunch</string>
    <string name="edit_lunch_title_text">Title</string>
    <string name="edit_lunch_type">Typ</string>
    <string name="edit_lunch_pick_day">Välj dag: </string>
    <string name="edit_lunch_mon">Måndag</string>
    <string name="edit_lunch_tis">Tisdag</string>
    <string name="edit_lunch_ons">Onsdag</string>
    <string name="edit_lunch_tors">Torsdag</string>
    <string name="edit_lunch_fre">Fredag</string>
    <string name="edit_lunch_add">Lägg till</string>
    <string name="edit_lunch_remove_all">Ta bort alla</string>

    <!--Edit users-->
    <string name="edit_users_register">REGISTRERA</string>
    <string name="edit_users_firstname">Förnamn</string>
    <string name="edit_users_surname">Efternamn</string>
    <string name="edit_users_password">Lösenord</string>
    <string name="edit_users_write_password_again">Skriv Lösenord igen</string>
    <string name="edit_users_admin">Admin</string>

    <!-- Event -->
    <string name="event_register">REGISTRERA</string>
    <string name="event_title">Titel</string>
    <string name="event_description">Beskrivning</string>
    <string name="event_add_pic">Lägg till Bild</string>
    <string name="event_create">Skapa event</string>

    <!-- Ny order -->
    <string name="new_order_drink">Dryck</string>
    <string name="new_order_food">Mat</string>
    <string name="new_order_summary">SUMMERING</string>

    <!-- Schedule -->
    <string name="schedule_date">Date</string>

    <!-- Visa nota -->
    <string name="show_check_total">TOTAL: </string>

    <!-- Visa nota -->
    <string name="table_overview_new_booking">NY BOKNING</string>
    <string name="table_overview_show_booking">VISA BOKNINGAR</string>


    <!-- Splash screen -->
    <string name="splashscreen_loading_text">Loggar in…</string>
</resources>
