<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditLunchFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/lunchTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_lunch_edit_title"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleLunchInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:textSize="18sp"
                android:autofillHints="@string/edit_lunch_title_text"
                android:hint="@string/edit_lunch_title_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/typeLunchInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:autofillHints="@string/edit_lunch_type"
                android:hint="@string/edit_lunch_type"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/chooseDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_lunch_pick_day"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/daysRadioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/mondayRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_lunch_mon" />

            <RadioButton
                android:id="@+id/tuesdayRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_lunch_tis" />

            <RadioButton
                android:id="@+id/wednesdayRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_lunch_ons" />

            <RadioButton
                android:id="@+id/thursdayRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_lunch_tors" />

            <RadioButton
                android:id="@+id/fridayRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_lunch_fre" />
        </RadioGroup>

        <Button
            android:id="@+id/addLunchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:ems="12"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/edit_lunch_add"
            android:textColor="#FFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daysRadioButtons" />

        <Button
            android:id="@+id/deleteLunchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#EB2121"
            android:ems="12"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/edit_lunch_remove_all"
            android:textColor="#FFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addLunchButton" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>