<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardElevation="2dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_booking_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_booking_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/BookingamountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_booking_nrOfPersons"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/BookingtimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:text="@string/view_booking_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <ImageButton
                android:id="@+id/options"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit_item"
                app:srcCompat="@drawable/ic_edit_24dp" />
        </TableRow>

    </TableLayout>
</merge>